# DRF_DZ_Project

./: .coverage  .env.sample  Dockerfile  README.MD  course.json  docker-compose.yml  lesson.json  payment.json  pyproject.toml  requirements.txt  user.json
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  temp.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_description_alter_lesson_video.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_course.py  0005_alter_lesson_video_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options_alter_payment_payment_date.py  0004_payment_link_to_pay_payment_session_id.py  0005_alter_payment_amount_alter_payment_payment_date_and_more.py
